fix: improve usability on small screens

--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -1,11 +1,11 @@
 #search {
-  width: 30rem;
+  width: min(30rem, 90%);
   display: flex;
   flex-direction: column;
   background-color: var(--search-background-color);
 
   box-shadow: 0px 4px 5px -3px #0006;
-border-radius: 10px;
+  border-radius: 10px;
   overflow: hidden;
   transition: all 0.15s;
 }
